--- a/workspace/ch01-buildup/counter/01/index.html
+++ b/workspace/ch01-buildup/counter/01/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <header>
-      <h1>Counter - sample</h1>
+      <h1>Counter - HTML + JS</h1>
       <p>파일 경로: <span id="filepath"></span></p>
     </header>
     <div id="counter">
