--- a/workspace/ch01-buildup/counter/04/index.html
+++ b/workspace/ch01-buildup/counter/04/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <div id="app">
+  <!-- <div id="app">
     <header>
-      <h1>Counter - sample</h1>
+      <h1>Counter - HTML + JS</h1>
       <p>파일 경로: <span id="filepath"></span></p>
     </header>
     <div id="counter">
@@ -19,13 +19,34 @@
       <button type="button" onclick="handleUp()">+</button>
       <span>0</span>
     </div>
-  </div>
+  </div> -->
+  <div id="root"></div>
+  <script type="module">
+    //애플리케이션 시작점
+    function App() {
+      return (
+        Yong.createElement('div', { id: 'app' },
+          Yong.createElement('header', null,
+            Yong.createElement('h1', null, 'Counter-createElement() 라이브러리 사용'),
+            Yong.createElement('p', null, '파일 경로:',
+              Yong.createElement('span', { id: 'filepath' }, `ch${document.URL.split('/ch')[1]}index.html`))),
+          Yong.createElement('div', { id: 'counter' },
+            Yong.createElement('button', { type: 'button', onclick: 'handleDown()' }, '-'),
+            Yong.createElement('button', { type: 'button', onclick: 'handleReset(event)' }, '0'),
+            Yong.createElement('button', { type: 'button', onclick: 'handleUp()' }, '+'),
+            Yong.createElement('span', null, 0)))
+      )
+    }
+    import Yong from './yong.js'
 
-  <script type="text/javascript">
-    document.querySelector('#filepath').textContent = `ch${document.URL.split('/ch')[1]}index.html`;
+    Yong.createRoot(document.getElementById('root')).render(App)
+
   </script>
 
+
+
   <script type="text/javascript">
+
     let count = 0;
 
     const handleDown = () => {
