--- a/workspace/ch01-buildup/react/04/index.html
+++ b/workspace/ch01-buildup/react/04/index.html
@@ -27,7 +27,7 @@
     function Header() {
       return (
         <header>
-          <h1>Todo List - 컴포넌트 분리()</h1>
+          <h1>Todo List - 기능추가()</h1>
           <p>파일 경로: <span id="filepath">{`ch{document.URL.split('/ch')[1]}index.html`}</span></p>
         </header>
       )
