--- a/workspace/ch02-start/todo/03.html
+++ b/workspace/ch02-start/todo/03.html
@@ -38,6 +38,7 @@
     )
   }
 
+  console.log('render')
   function App() {
     const [title, setTitle] = React.useState('React Props')
     const list = [
