--- a/workspace/ch01-buildup/js-review/05/index.html
+++ b/workspace/ch01-buildup/js-review/05/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>자바스크립트 모듈</title>
 </head>
+
 <body>
   <header>
     <h1>module 예제 :)</h1>
@@ -14,14 +16,20 @@
     <p>개발자 도구의 콘솔을 확인하세요.</p>
   </div>
   <footer>
-    <p>Front-End School 9기</p>
+    <p>Front-End School 11기</p>
   </footer>
 
   <script type="module">
     document.querySelector('#filepath').textContent = `ch${document.URL.split('/ch')[1]}index.html`;
+    import MyMath, { plus, minus } from './export.js'
 
-    
+    console.log(plus(10, 20))
+    console.log(minus(10, 20))
+    console.log(MyMath.avg(10, 20, 30)) //undefined는 연산하면 NaN이 나온다.
+
+
   </script>
 
 </body>
+
 </html>
